[gd_scene load_steps=25 format=2]

[ext_resource path="res://assets/Enemies/1-BOMB/2-Bomb On/6.png" type="Texture" id=1]
[ext_resource path="res://assets/Enemies/1-BOMB/2-Bomb On/7.png" type="Texture" id=2]
[ext_resource path="res://assets/Enemies/1-BOMB/2-Bomb On/10.png" type="Texture" id=3]
[ext_resource path="res://assets/Enemies/1-BOMB/2-Bomb On/4.png" type="Texture" id=4]
[ext_resource path="res://assets/Enemies/1-BOMB/2-Bomb On/3.png" type="Texture" id=5]
[ext_resource path="res://assets/Enemies/1-BOMB/2-Bomb On/1.png" type="Texture" id=6]
[ext_resource path="res://assets/Enemies/1-BOMB/2-Bomb On/9.png" type="Texture" id=7]
[ext_resource path="res://assets/Enemies/1-BOMB/2-Bomb On/8.png" type="Texture" id=8]
[ext_resource path="res://assets/Enemies/1-BOMB/2-Bomb On/5.png" type="Texture" id=9]
[ext_resource path="res://assets/Enemies/1-BOMB/2-Bomb On/2.png" type="Texture" id=10]
[ext_resource path="res://assets/Enemies/1-BOMB/3-Explotion/9.png" type="Texture" id=11]
[ext_resource path="res://assets/Enemies/1-BOMB/3-Explotion/7.png" type="Texture" id=12]
[ext_resource path="res://assets/Enemies/1-BOMB/3-Explotion/1.png" type="Texture" id=13]
[ext_resource path="res://assets/Enemies/1-BOMB/3-Explotion/8.png" type="Texture" id=14]
[ext_resource path="res://assets/Enemies/1-BOMB/3-Explotion/6.png" type="Texture" id=15]
[ext_resource path="res://assets/Enemies/1-BOMB/1-Bomb Off/1.png" type="Texture" id=16]
[ext_resource path="res://assets/Enemies/1-BOMB/3-Explotion/4.png" type="Texture" id=17]
[ext_resource path="res://assets/Enemies/1-BOMB/3-Explotion/5.png" type="Texture" id=18]
[ext_resource path="res://assets/Enemies/1-BOMB/3-Explotion/2.png" type="Texture" id=19]
[ext_resource path="res://assets/Enemies/1-BOMB/3-Explotion/3.png" type="Texture" id=20]
[ext_resource path="res://src/Actors/Enemy/Bomb.gd" type="Script" id=21]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 10 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 9 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 3 ) ],
"loop": true,
"name": "on",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ) ],
"loop": true,
"name": "off",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 15 ), ExtResource( 12 ), ExtResource( 14 ), ExtResource( 11 ) ],
"loop": true,
"name": "explode",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 50.04

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 113.5, 50 )

[node name="BombEnemy" type="Area2D"]
script = ExtResource( 21 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "on"
frame = 4
speed_scale = 3.0
playing = true

[node name="ExplodeCollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 7 )
shape = SubResource( 2 )
disabled = true

[node name="BombOnArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BombOnArea"]
position = Vector2( -0.5, 6 )
shape = SubResource( 3 )

[node name="TimerBombExplode" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_BombEnemy_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="BombOnArea" to="." method="_on_BombOnArea_body_entered"]
[connection signal="timeout" from="TimerBombExplode" to="." method="_on_TimerBombExplode_timeout"]
